--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.philipp_mandler.android.vtpl"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1596
-        versionName "1.5.9.6"
+        versionCode 1597
+        versionName "1.5.9.7"
     }
     buildTypes {
         release {
@@ -22,11 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:design:23.1.0'
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
-    compile 'net.danlew:android.joda:2.8.2'
+    //compile 'net.danlew:android.joda:2.8.2'
 }
